--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,20 +1,35 @@
 <p id="notice">
   <%= notice %>
 </p>
+<div id="flip">Click to slide the panel down or up</div>
+  <div id="panel">
+    <div class="container">
+    <h1>
+      Messages
+      <span id="message_counter">
+        <%= Message.count %>
+      </span>
+    </h1>
 
-<h1>
-  Messages
-  <span id="message_counter">
-    <%= Message.count %>
-  </span>
-</h1>
+    <div id="new_message">
+      <%= render partial: "messages/form", locals: { message: Message.new } %>
+    </div>
 
-<div id="new_message">
-  <%= render partial: "messages/form", locals: { message: Message.new } %>
+    <div id="messages">
+      <%= render @messages %>
+    </div>
+  </div>
 </div>
+<style> 
+#panel, #flip {
+  padding: 5px;
+  text-align: center;
+  background-color: #e5eecc;
+  border: solid 1px #c3c3c3;
+}
 
-<div id="messages">
-  <%= render @messages %>
-</div>
-
-<%= link_to "New message", new_message_path %>
+#panel {
+  padding: 50px;
+  display: none;
+}
+</style>
