--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,12 +1,14 @@
 <div id="<%= dom_id message %>" class="scaffold_record">
+
+
   <p>
     <strong>Body:</strong>
     <%= message.body %>
-  </p>
-
-  <p>
+ 
     <%# <%= link_to "Show this message", message %> 
-    <%= button_to "Edit this message", edit_message_path(message), method: :post %>
-    <%= button_to "Destroy this message", message_path(message), method: :delete %>
+    <%= button_to "Edit", edit_message_path(message), method: :post,class:"btn btn-outline-info" %>
+    <%= button_to "Delete", message_path(message), method: :delete, class:"btn btn-outline-danger" %>
+  
   </p>
+    <hr>
 </div>
